--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^5.0.0-rc.2",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
@@ -22,9 +23,11 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/leaflet": "^1.9.16",
     "@types/locomotive-scroll": "^4.1.4",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
+    "@types/react-simple-maps": "^3.0.6",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
