--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.5",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
+    "leaflet": "^1.9.4",
+    "leaflet-css": "^0.1.0",
     "locomotive-scroll": "^4.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-leaflet": "^5.0.0-rc.2",
+    "react-icons": "^5.4.0",
+    "react-leaflet": "^5.0.0",
     "react-locomotive-scroll": "^0.2.2",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
