--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/react-map-gl": "^6.1.6",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
     "leaflet": "^1.9.4",
     "leaflet-css": "^0.1.0",
     "locomotive-scroll": "^4.1.4",
+    "mapbox-gl": "^3.9.3",
+    "maplibre-gl": "^3.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
     "react-locomotive-scroll": "^0.2.2",
+    "react-map-gl": "^7.1.8",
     "react-router-dom": "^7.1.1",
     "react-toastify": "^11.0.2",
     "reactstrap": "^9.2.3"
